--- a/release/data/configure.ini
+++ b/release/data/configure.ini
@@ -3,10 +3,62 @@ ServerIP=
 
 [System_Param]
 deskID=0
-Comm=COM4
+Comm=COM2
 HeartAuscultateType=1
 LoudSoundType=1
-deskNumber=12
-WebIP=192.168.1.139
+deskNumber=26
+WebIP=192.168.1.102
 WebName=test
 WebPw=test
+
+
+[
+    {
+        "id": "5",
+        "title": "测试二",
+        "starttime": "1508342400",
+        "endtime": "0",
+        "allday": "1",
+        "color": "#360",
+        "user_id": "1",
+        "event_type": "2",
+        "event_content_id": "2",
+        "event_content": "测试考卷",
+        "exam": "2"
+    },
+    {
+        "id": "4",
+        "title": "测试一下",
+        "starttime": "1508342400",
+        "endtime": "0",
+        "allday": "1",
+        "color": "#06c",
+        "user_id": "1",
+        "event_type": "1",
+        "event_content_id": "1",
+        "event_content": "测试",
+        "courses": [
+            {
+                "package_course_id": "1",
+                "package_id": "1",
+                "course_id": "5",
+                "system_course_id": "5",
+                "course_name": "心脏传导系统"
+            },
+            {
+                "package_course_id": "2",
+                "package_id": "1",
+                "course_id": "3",
+                "system_course_id": "3",
+                "course_name": "心脏内部结构"
+            },
+            {
+                "package_course_id": "3",
+                "package_id": "1",
+                "course_id": "1",
+                "system_course_id": "1",
+                "course_name": "心脏的位置"
+            }
+        ]
+    }
+]
