--- a/Makefile.Release
+++ b/Makefile.Release
@@ -679,6 +679,7 @@ release\moc_qtrainmainwindow.cpp: F:\qt_32\5.7\msvc2015\include\QtWidgets\QWidge
 		F:\qt_32\5.7\msvc2015\include\QtNetwork\QSslPreSharedKeyAuthenticator \
 		F:\qt_32\5.7\msvc2015\include\QtNetwork\qsslpresharedkeyauthenticator.h \
 		F:\qt_32\5.7\msvc2015\include\QtCore\QtGlobal \
+		qmaxwidget.h \
 		F:\qt_32\5.7\msvc2015\include\ActiveQt\QAxWidget \
 		F:\qt_32\5.7\msvc2015\include\ActiveQt\qaxwidget.h \
 		F:\qt_32\5.7\msvc2015\include\ActiveQt\qaxbase.h \
@@ -4078,6 +4079,7 @@ release\main.obj: main.cpp qtrainmainwindow.h \
 		F:\qt_32\5.7\msvc2015\include\QtNetwork\QSslPreSharedKeyAuthenticator \
 		F:\qt_32\5.7\msvc2015\include\QtNetwork\qsslpresharedkeyauthenticator.h \
 		F:\qt_32\5.7\msvc2015\include\QtCore\QtGlobal \
+		qmaxwidget.h \
 		F:\qt_32\5.7\msvc2015\include\ActiveQt\QAxWidget \
 		F:\qt_32\5.7\msvc2015\include\ActiveQt\qaxwidget.h \
 		F:\qt_32\5.7\msvc2015\include\ActiveQt\qaxbase.h \
@@ -4390,6 +4392,7 @@ release\qtrainmainwindow.obj: qtrainmainwindow.cpp qtrainmainwindow.h \
 		F:\qt_32\5.7\msvc2015\include\QtNetwork\QSslPreSharedKeyAuthenticator \
 		F:\qt_32\5.7\msvc2015\include\QtNetwork\qsslpresharedkeyauthenticator.h \
 		F:\qt_32\5.7\msvc2015\include\QtCore\QtGlobal \
+		qmaxwidget.h \
 		F:\qt_32\5.7\msvc2015\include\ActiveQt\QAxWidget \
 		F:\qt_32\5.7\msvc2015\include\ActiveQt\qaxwidget.h \
 		F:\qt_32\5.7\msvc2015\include\ActiveQt\qaxbase.h \
@@ -6496,7 +6499,9 @@ release\net_server.obj: net_server.cpp net_server.h \
 		F:\qt_32\5.7\msvc2015\include\QtNetwork\QUdpSocket \
 		F:\qt_32\5.7\msvc2015\include\QtNetwork\qudpsocket.h \
 		F:\qt_32\5.7\msvc2015\include\QtCore\qDebug \
-		F:\qt_32\5.7\msvc2015\include\QtCore\QMapIterator
+		F:\qt_32\5.7\msvc2015\include\QtCore\QMapIterator \
+		F:\qt_32\5.7\msvc2015\include\QtCore\QSettings \
+		F:\qt_32\5.7\msvc2015\include\QtCore\qsettings.h
 
 release\tellclientconnected.obj: tellclientconnected.cpp tellclientconnected.h \
 		F:\qt_32\5.7\msvc2015\include\QtCore\QObject \
